Move use_case/submit to submission/create
Restructure the controller, route, tests and swagger
