# app/controllers/api/V1/use_case_controller.rb
@@ -1,24 +1,6 @@
 module Api
   module V1
     class UseCaseController < ApiController
-      rescue_from ::StandardError, with: :deny_access
-
-      def submit
-        raise 'Unauthorised use case' unless authorised_use_case?
-
-        submission = Submission.new(filtered_params.merge(status: 'created'))
-
-        return unless submission.save
-
-        SubmissionProcessWorker.perform_async(submission.id)
-        render json: { id: submission.id,
-                       _links: [href: "#{request.base_url}/api/v1/submission-status/#{submission.id}"] },
-               status: :accepted
-        #  TO DO show errors when the request does not include all required data
-        # else
-        #   render json: submission.errors&.to_json, status: :bad_request
-      end
-
       def one
         submission = Submission.create(filtered_params.merge(use_case: :one, status: 'created'))
         result = ApplyGetTest.call_with(submission)
@@ -45,16 +27,6 @@ module Api
       end
 
       private
-
-      def deny_access
-        render json: { error: 'Unauthorised use case' }.to_json, status: :bad_request
-      end
-
-      def authorised_use_case?
-        doorkeeper_token.application.scopes.to_a.map do |scope|
-          scope.ends_with? filtered_params['use_case']
-        end.any?
-      end
 
       def filtered_params
         params.require(:filter).permit(:use_case,
