# config/routes.rb
@@ -31,13 +31,13 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      post 'use_case/submit', to: 'use_case#submit', format: :json
+      post 'submission/create', to: 'submissions#create', format: :json
+      get 'submission/status/:id', to: 'submissions#status', as: 'submission-status-id', format: :json
+      get 'submission/result/:id', to: 'submissions#result', as: 'submission-result-id', format: :json
       get 'use_case/one', to: 'use_case#one', format: :json
       get 'use_case/two', to: 'use_case#two', format: :json
       get 'use_case/three', to: 'use_case#three', format: :json
       get 'use_case/four', to: 'use_case#four', format: :json
-      get 'submission/status/:id', to: 'submissions#status', as: 'submission-status-id', format: :json
-      get 'submission/result/:id', to: 'submissions#result', as: 'submission-result-id', format: :json
     end
   end
 end
